<?xml version="1.0"?>
<package format="2">
  <name>simulation_utils_ros_tool</name>
  <version>0.0.1</version>
  <description>Excecutables for the simulation framework</description>

  <license>contact-the-maintainer</license>
  <maintainer email="maximilian.naumann@kit.edu">Maximilian Naumann</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>rosparam_handler</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>

  <build_depend>roscpp</build_depend>
  <depend>roslib</depend>
  <depend>nodelet</depend>

  <depend>geodesy</depend>
  <depend>tf2_ros</depend>

</package>
